# fireflies-ai-transcript-manager

./: .gitignore  LICENSE  Makefile  README.md  example.secrets.toml  fireflies.py  pyproject.toml  settings.toml
.github/workflows/: lint.yml
src/: config.py  fireflies.py
